Bug 354352 - Thumbnail shown in up-left corner of the screen when you close app from the thumbnail
Summary: Thumbnail shown in up-left corner of the screen when you close app from the t...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-25 15:34 UTC by Guido
Modified: 2015-11-26 21:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guido 2015-10-25 15:34:10 UTC
Thumbnails are shown in up-left corner of the screen for a fraction of second when you close the app from the [X] on the thumbnail

Reproducible: Always

Steps to Reproduce:
1. Click on the [X] of a thumbnail on the taskbar
2. See the up-left corner of the screen


Actual Results:  
The thumbnail appears for a fraction of second in up-left corner fo the screen

Expected Results:  
The thumbnail should disappear staying where it is
Comment 1 David Edmundson 2015-10-25 17:02:43 UTC
heh Tooltip::hideToolTip doesn't end up hiding it, it just runs:

void ToolTipDialog::dismiss()
{
    m_showTimer->start(m_hideTimeout / 20); // pretty short: 200ms
}

and as we unset out visualParent as our Task is deleted.
it ends up topLeft.
Comment 2 Eike Hein 2015-11-26 21:30:23 UTC
Git commit 8ce47c5f1e422f9093a8da0e2a548082792bbd1a by Eike Hein.
Committed on 26/11/2015 at 21:29.
Pushed by hein into branch 'master'.

Don't reposition while hiding.

M  +1    -1    src/plasmaquick/dialog.cpp

http://commits.kde.org/plasma-framework/8ce47c5f1e422f9093a8da0e2a548082792bbd1a