Don't reposition while hiding.

BUG:354352